Changed to normal urls instead of # based url (require changes to web-server) Added title tags to all the pages Added meta tags for home and community page

--- a/src/components/analyze/aq-analyze-detail.html
+++ b/src/components/analyze/aq-analyze-detail.html
@@ -54,6 +54,8 @@
 				}
 
 				this.currentPath = currentPath;
+
+				document.title = "Backtest Detail for " + this.params.strategyName + " - AimsQuant";
 			},
 
 			_computeDetailPage: function(type) {
