--- a/src/components/analyze/aq-analyze-home.html
+++ b/src/components/analyze/aq-analyze-home.html
@@ -369,6 +369,7 @@
 				}
 
 				this.dirtyBit = 0;
+				document.title = "All backtests for " + this.strategyName + " - AimsQuant";
 			},
 
 			onGetAllBacktestsForStrategyError: function(e) {
