--- a/src/components/aq-google-analytics.html
+++ b/src/components/aq-google-analytics.html
@@ -4,9 +4,7 @@
 <dom-module id='aq-google-analytics'>
 
   <template>
-      <app-location route="{{route}}" 
-          use-hash-as-path 
-          on-path-changed='onChangePath'>
+      <app-location route="{{route}}" on-path-changed='onChangePath'>
       </app-location>
   </template>
 
