--- a/src/components/community/aq-community-previewpost.html
+++ b/src/components/community/aq-community-previewpost.html
@@ -85,6 +85,10 @@
                 },
             },
 
+            attached: function() {
+                document.title = "Community: Preview post - AimsQuant";
+            },
+
             onEdit: function () {
                 this.fire('edit-clicked');
             },
