--- a/src/components/editor/aq-editor-home.html
+++ b/src/components/editor/aq-editor-home.html
@@ -476,6 +476,8 @@
                     this.fire('newClicked');
                 }
 
+                document.title = "All Strategies - AimsQuant";
+
             },
 
             resetView: function() {
