--- a/src/components/user/aq-user-login-panel.html
+++ b/src/components/user/aq-user-login-panel.html
@@ -220,7 +220,11 @@
 
     <template>
 
-        <app-location route="{{route}}" use-hash-as-path></app-location>
+        <!--app-location route="{{route}}" use-hash-as-path></app-location-->
+
+        <app-location route="{{route}}">
+        </app-location>
+
         <app-route
                 route="{{route}}"
                 pattern="/user/:displayMode"
