--- a/src/layouts/aq-analyze-main.html
+++ b/src/layouts/aq-analyze-main.html
@@ -17,8 +17,10 @@
     </style>
     <template>
 
-        <app-location route="{{route}}" use-hash-as-path></app-location>
+        <!--app-location route="{{route}}" use-hash-as-path></app-location-->
         
+        <app-location route="{{route}}"></app-location>
+
         <app-route
             route="{{route}}"
             pattern="/research/analyze/:strategyId"
