--- a/src/layouts/aq-editor-main.html
+++ b/src/layouts/aq-editor-main.html
@@ -25,7 +25,8 @@
   <template>
     <aq-check-authentication id='authItem'></aq-check-authentication>
     
-    <app-location route="{{route}}" use-hash-as-path></app-location>
+    <!--app-location route="{{route}}" use-hash-as-path></app-location-->
+    <app-location route="{{route}}"></app-location>
     <app-route route="{{route}}"
                 pattern="/research/editor/:strategyId"
                 data="{{routeData}}"
