--- a/src/components/aq-error-page.html
+++ b/src/components/aq-error-page.html
@@ -60,7 +60,7 @@
 
 	<template>
 
-		<app-location route="{{route}}" use-hash-as-path></app-location>
+		<app-location route="{{route}}"></app-location>
         
         <app-route
             route="{{route}}"
