--- a/src/components/community/aq-community-createpost.html
+++ b/src/components/community/aq-community-createpost.html
@@ -193,7 +193,7 @@
 
     <template>
         <aq-check-authentication id='authItem'></aq-check-authentication>
-        <app-location route="{{route}}" use-hash-as-path></app-location>
+        <app-location route="{{route}}"></app-location>
 
         <app-route
             route="{{route}}"
@@ -356,16 +356,17 @@
             },
 
             attached: function() {
-              this.resetView();
-              this.attachedBacktestId = this.queryParams.backtestId;
+                this.resetView();
+                this.attachedBacktestId = this.queryParams.backtestId;
 
-              var currentPath = JSON.parse(JSON.stringify(this.currentPath));
+                var currentPath = JSON.parse(JSON.stringify(this.currentPath));
 
-              this.currentPath = [];
-              currentPath.push({text:"Create a Post"});
-              this.currentPath = currentPath;
-              this.tags = [];
+                this.currentPath = [];
+                currentPath.push({text:"Create a Post"});
+                this.currentPath = currentPath;
+                this.tags = [];
 
+                document.title = "Community: Create post - AimsQuant";
             },
 
             postThread: function () {
