--- a/src/layouts/aq-community-main.html
+++ b/src/layouts/aq-community-main.html
@@ -17,7 +17,9 @@
 
   <template>
 
-      <app-location route="{{route}}" use-hash-as-path></app-location>
+      <!--app-location route="{{route}}" use-hash-as-path></app-location-->
+      <app-location route="{{route}}"></app-location>
+
       <app-route route="{{route}}"
                 pattern="/research/community/:threadId"
                 data="{{routeData}}"
