--- a/src/layouts/aq-dashboard-main.html
+++ b/src/layouts/aq-dashboard-main.html
@@ -28,7 +28,8 @@
 
   <template>
 
-        <app-location route="{{route}}" use-hash-as-path></app-location>
+        <!--app-location route="{{route}}" use-hash-as-path></app-location-->
+        <app-location route="{{route}}"></app-location>
         <app-route route="{{route}}"
                     pattern="/research/:page"
                     data="{{routeData}}"
