Fixed problem with url change and action on history browsing Fixed problem with change in tabs on history browsing

--- a/src/components/aq-toolbar.html
+++ b/src/components/aq-toolbar.html
@@ -209,19 +209,22 @@
                         }
                     }
 
+                    console.warn(window.location.href);
+                    console.warn(found);
+
                     var rt = routes[0];
                     if(!found) {
                         this.fire('rt-changed', {route:rt});
                     } else {
                         rt = window.location.href;
-                        if(rt.indexOf('?') != -1) {
+                        /*if(rt.indexOf('?') != -1) {
                             rt = rt.slice(rt.indexOf('?'));    
                         } else {
                             rt = rt.slice(rt.indexOf('#') + 1);    
-                        }
+                        }*/
 
                         //find rt in 
-                        this.async(function(){this.fire('rt-changed', {route: rt});}, 1000);
+                        //this.async(function(){this.fire('rt-changed', {route: rt});}, 1000);
                     }
                     
                 }
@@ -252,6 +255,7 @@
             },
 
             _currentURLChanged: function() {
+                console.warn(this.currentUrl);
                 var routeList = {"0":["/main"], "1":["/about"], "2":["/research/editor", "/research/analyze"], "3":["/research/community"], "4":["/user/signin","/user/signout","/user/authMessage"], "5":["/user/signup"], "6":["/research/help"]};
                 
                 var i = 0;
