--- a/src/components/aq-homepage.html
+++ b/src/components/aq-homepage.html
@@ -327,7 +327,7 @@
         },
 
         attached: function() {
-            document.title = 'Backtest investment stategies for Indian Equity Markets';
+            document.title = 'Backtest investment stategies for Indian Equity Markets | AimsQuant';
 
         },
 
