--- a/src/components/community/aq-community-createpost.html
+++ b/src/components/community/aq-community-createpost.html
@@ -366,7 +366,7 @@
                 this.currentPath = currentPath;
                 this.tags = [];
 
-                document.title = "Community: Create post - AimsQuant";
+                document.title = "Community: Create a post - AimsQuant";
             },
 
             postThread: function () {
