--- a/src/components/editor/aq-editor-edit.html
+++ b/src/components/editor/aq-editor-edit.html
@@ -442,7 +442,7 @@
             },
 
             goToHome: function () {
-                this.fire('rt-changed', {route: '/research/editor'});
+                this.fire('rt-changed', {route: '/research/strategy'});
             },
 
             onGetStrategyResponse: function (data) {
