--- a/src/layouts/aq-analyze-main.html
+++ b/src/layouts/aq-analyze-main.html
@@ -23,13 +23,13 @@
 
         <app-route
             route="{{route}}"
-            pattern="/research/analyze/:strategyId"
+            pattern="/research/backtests/:strategyId"
             data="{{homeData}}">
         </app-route>
 
         <app-route
             route="{{route}}"
-            pattern="/research/analyze/:strategyId/:id"
+            pattern="/research/backtests/:strategyId/:id"
             data="{{detailData}}"
             query-params="{{queryParams}}"
             active="{{detailActive}}">
