--- a/src/components/analyze/aq-analyze-detail.html
+++ b/src/components/analyze/aq-analyze-detail.html
@@ -40,15 +40,15 @@
 
 				this.currentPath = [];
 
-				currentPath.push({text:"All Strategies", route:"/research/editor"});
+				currentPath.push({text:"All Strategies", route:"/research/strategy"});
 				
-				currentPath.push({text:this.params.strategyName, route:"/research/editor/"+this.strategyId});
+				currentPath.push({text:this.params.strategyName, route:"/research/strategy/"+this.strategyId});
 					
 				if(this.params.type == "backtest") {
-					currentPath.push({text:"All Backtests", route:"/research/analyze/"+this.strategyId});
+					currentPath.push({text:"All Backtests", route:"/research/backtests/"+this.strategyId});
 					currentPath.push({text:this.params.heading});
 				} else {
-					//currentPath.push({text:this.params.strategyName, route:"/research/editor/"+this.strategyId});
+					//currentPath.push({text:this.params.strategyName, route:"/research/strategy/"+this.strategyId});
 					currentPath.push({text:"Forward Test"});
 					
 				}
